--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="./images/logo.svg" type="image/x-icon">
-    <link rel="stylesheet" href="/js/splitting/dist/splitting.css">
-    <link rel="stylesheet" href="/js/splitting/dist/splitting-cells.css">
-    <link rel="stylesheet" href="/js/slick/slick.css">
-    <link rel="stylesheet" href="/js/slick/slick-theme.css">
+    <link rel="stylesheet" href="./js/splitting/dist/splitting.css">
+    <link rel="stylesheet" href="./js/splitting/dist/splitting-cells.css">
+    <link rel="stylesheet" href="./js/slick/slick.css">
+    <link rel="stylesheet" href="./js/slick/slick-theme.css">
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
