--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
           <img src="./images/logo.svg" alt="Tymur Renhach">
         </a>
       </div>
+      <div class="hamburger">
+        <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+      </div>
       <div class="header-menu">
         <ul class="header-menu__items">
           <li class="header-menu__item active">
